--- a/TODO.org
+++ b/TODO.org
@@ -20,10 +20,10 @@
 **** TODO All metadata should be extracted from configuration files and setting file. This is important for reproducibility.
 
 *** Automatic testings
-**** TODO compare with references.
-          In species section in settings file a possible option can be test=true/false, and reference=filename/nothing
+**** DONE compare with other/previous netcdf named references.
+          In species section in settings file a possible option can be test=true/false, and ref=filename
           so if test=true and reference=filename then it would try to compare results with reference.
-          if test=false but reference=filename then it will considered a case to store in references folder for future 
+**** TODO if test=false but reference=filename then it will considered a case to store in references folder for future 
           comparisons. Note: I have created a small script with the comparison that can be used for that.
           
 **** TODO compare with Mie code from libRadTran
@@ -52,6 +52,8 @@
 
 *** Store:
 **** DONE check if netcdf output filenames are already there, to avoid overwritting
-**** TODO check about order dimensions
+**** DONE check about order dimensions (testing is using now nco to create a consistent file for comparing).
 	
 ** Refactoring
+
+*** TODO MieBB: it is important to refactor, document and improve the mie scattering code.
