--- a/TODO.org
+++ b/TODO.org
@@ -9,27 +9,28 @@
    future for a ticket system in Jira or Github.
 
 ** Usability
-   *** Add make files: make install; make clean, make test, make ifs_version
+   *** DONE Add make files: make install; make clean, make test, make ifs_version
 
 ** Reproducibility
 
 *** Refractive Index
 **** TODO get the source info for refractive index data
-**** TODO repair inconsistency in the files with refractive index regarding wavelength units.
-          This is clear for organic aerosol files: inso, waso, 
+**** DONE repair inconsistency in the files with refractive index regarding wavelength units.
+          This is clear for organic aerosol files: inso, waso, soot
 
 *** References
 **** TODO add reference to papers/source for each configuration file.
-**** TODO All metadata should be extracted from configuration files and setting file. This is important for reproducibility.
+**** DONE All metadata should be extracted from configuration files and setting file. This is important for reproducibility.
 
 *** Automatic testings
 **** DONE compare with other/previous netcdf named references.
           In species section in settings file a possible option can be test=true/false, and ref=filename
           so if test=true and reference=filename then it would try to compare results with reference.
-**** TODO if test=false but reference=filename then it will considered a case to store in references folder for future 
+**** TODO Idea: if test=false but reference=filename then it will considered a case to store in references folder for future 
           comparisons. Note: I have created a small script with the comparison that can be used for that.
-          
-**** TODO compare with Mie code from libRadTran
+         
+**** DONE Create automatic tests for single sphere.
+**** TODO compare with Mie code from libRadTran.
 	
 ** Core features
 
